--- a/assets/admin/custom.css
+++ b/assets/admin/custom.css
@@ -85,3 +85,46 @@ ul.parsley-errors-list {
     -o-border-radius: 3px;
     -webkit-border-radius: 3px;
 }
+
+
+/* 
+*
+* Pwstrength
+*/
+
+.pwstrength_viewport_progress {
+    margin-top: 8px;
+    margin-bottom: 20px;
+}
+
+.pwstrength_viewport_progress .progress {
+    border-radius: .20rem;
+}
+
+
+/* 
+*
+* hide show password
+*/
+
+.hideShowPassword-toggle {
+    background: transparent;
+    border: 0;
+    border-radius: 0.25em;
+    color: #888;
+    cursor: pointer;
+    font-size: 0.75em;
+    font-weight: bold;
+    margin-right: 0.5em;
+    padding: 0.5em;
+    text-transform: uppercase;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+}
+
+.hideShowPassword-toggle:hover,
+.hideShowPassword-toggle:focus {
+    background-color: #eee;
+    color: #555;
+    outline: transparent;
+}
