--- a/assets/admin/custom.css
+++ b/assets/admin/custom.css
@@ -64,6 +64,12 @@ ul.parsley-errors-list {
     text-align: right;
 }
 
+@media only screen and (max-width: 767px) {
+    .row .col-form-label {
+        text-align: left;
+    }
+}
+
 
 /* 
 *
