update: fixing style texteditor for mobile version

--- a/assets/admin/custom.css
+++ b/assets/admin/custom.css
@@ -160,3 +160,9 @@ ul.parsley-errors-list {
     margin-top: 0px !important;
     width: 100% !important;
 }
+
+@media only screen and (max-width: 767px) {
+    .tinymce-multilang .mce-tinymce {
+        margin-top: -14px !important;
+    }
+}
