--- a/assets/admin/custom.css
+++ b/assets/admin/custom.css
@@ -199,3 +199,7 @@ div.mce-fullscreen {
     border-top-right-radius: 0 !important;
     border-bottom-right-radius: 0 !important;
 }
+
+.alert[data-notify="container"]{
+    box-shadow: 1px 2px 4px #ccc;
+}
