--- a/assets/admin/custom.css
+++ b/assets/admin/custom.css
@@ -203,3 +203,46 @@ div.mce-fullscreen {
 .alert[data-notify="container"]{
     box-shadow: 1px 2px 4px #ccc;
 }
+
+/* 
+*
+* Ajax loading page
+*/
+#loading_ajax {
+    position: fixed;
+    z-index: 2019;
+    background: rgba(255, 255, 255, 0.90);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.8;
+    filter: alpha(opacity= 90);
+    overflow: hidden;
+    text-align: center;
+    display:none;
+}
+#loading_ajax .loaderpageajax {
+    position: relative;
+    top: 40%;
+}  
+#loading_ajax img {
+    margin-bottom: 12px;
+}  
+#loading_ajax i.fa, #loading_ajax h4 {
+    opacity: 1.0;
+    filter: alpha(opacity= 100);
+}
+
+#result_ajax{
+    border:0;
+    padding:10px;
+    position:fixed;
+    color:white;
+    width:100%;
+    display:none;
+    box-shadow: #ccc 1px 2px 4px;
+    z-index:99999;
+    top: 0px;
+    /* overflow: auto;  */
+}
